# studentsManageSystem

./: CMakeLists.txt  README.md
src/manageSystemCore/: date.cpp  date.h  id.h  student.cpp  student.h  system.cpp
src/manageSystemLog/: log.cpp  log.h
src/manageSystemMysql/: connectMysql.cpp  connectMysql.h
